# cargo-buckal

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/actions/install-buck2/: action.yml
.github/actions/setup-rust-toolchains/: action.yml
.github/actions/setup-windows/: action.yml
.github/patches/fd/: testenv-find-fd-exe.patch
.github/workflows/: _buck2-build-test.yml  _buck2-generate.yml  _buck2-verify-cross-platform.yml  build-and-test.yml  cargo-buckal-integration-test.yml  check-build-and-test.yml  claude-review.yml  fd-integration-test.yml  git-internal-integration-test.yml  integration-test-cargo-buckal.yml  integration-test-fd.yml  integration-test-git-internal.yml  integration-test-libra.yml  integration-test-monorepo-demo.yml  libra-integration-test.yml  lint.yml  test-init-new-commands.yml  test-target-option.yml
asset/toolchains/: BUCK
asset/toolchains/cxx/: demo_cxx.bzl
asset/toolchains/cxx/tools/: lld_link.py  (+1 more)
assets/toolchains/cxx/: demo_cxx.bzl
assets/toolchains/rust/: demo_rust.bzl
doc/: multi-platform.md
docs/: cache.md  multi-platform.md
src/: assets.rs  buck.rs  buck2.rs  buckify.rs  bundles.rs  cache.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs  platform.rs  resolve.rs  utils.rs
src/buckify/: actions.rs  cross.rs  deps.rs  emit.rs  rules.rs  windows.rs
src/commands/: add.rs  build.rs  init.rs  migrate.rs  mod.rs  new.rs  patch.rs  remove.rs  test.rs  update.rs
tests/: resolve_dag.rs
tests/fixtures/diamond-deps/: Cargo.toml
tests/fixtures/diamond-deps-compat/: Cargo.toml
(+12 files in other folders)
