[package]
name = "cargo-buckal"
version = "0.0.0"
edition = "2024"

[dependencies]
cargo-platform = "0.3.0"
cargo_metadata = "0.22.0"
clap = { version = "4.5.41", features = ["derive"] }
fs_extra = "1.3.0"
indoc = "2.0.6"
rust-ini = "0.21"
itertools = "0.14.0"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_starlark = "0.1.17"
starlark_syntax = "0.13"
colored = "2.0"
inquire = "0.7.5"
toml = "0.8"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
pyo3-ffi = "0.26.0"
serde_json = "1.0.143"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
regex = "1.11.2"
anyhow = "1.0.100"
cargo-lock = "10.1.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
walkdir = "2.5.0"
hex = "0.4.3"
bitflags = "2.10.0"
phf = { version = "0.13.1", features = ["macros"] }
toml_edit = "0.22"
log = "0.4"
include_dir = "0.7.4"
